2001-01-17  Roland McGrath  <roland@frob.com>

	* dev.c (dev_buf_discard): Don't check AMOUNT if store_write failed.

2001-01-16  Marcus Brinkmann  <marcus@gnu.org>

	* dev.c (dev_open): Add missing argument `classes' to invocation
	of store_create.

	* dev.h: Include <hurd/trivfs.h> for struct trivfs_control.

2001-01-16  Roland McGrath  <roland@frob.com>

	* storeio.c (parse_opt): Set PARAMS->store_params.store_optional.
	(storeio_fsys): New global variable.
	(main): Use it.
	* dev.h: Declare it.
	* dev.c (dev_open): If DEV->store_name is null, open the underlying
	node using store_create.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

2000-03-19  Roland McGrath  <roland@baalperazim.frob.com>

	* io.c: Comments.

	* dev.h (struct dev): New members store_name, readonly, rdev.
	(dev_is_readonly): New inline function.
	* dev.c (dev_open): Take just one arg, a struct dev whose store==0.
	(dev_close): Shut down the store, but leave DEV intact with store==0.
	* storeio.c (struct storeio_argp_params): New type.
	(device, device_lock, store_name): Variables removed.
	(readonly, inhibit_cache, enforce_store, rdev): Likewise.
	These are all now members in struct storeio_argp_params or struct dev;
	rdev now uses dev_t instead of int.
	(parse_opt): Find a struct storeio_argp_params in STATE->input
	and fill it in accordingly.  Use makedev macro to construct rdev.
	(trivfs_append_args): Find options in struct dev off control hook.
	Use major, minor macros.
	(main): Make DEVICE a local here, and point FSYS->hook at it.
	Don't modify trivfs_allow_open.
	(getroot_hook): New static function.
	(trivfs_getroot_hook): New variable, initialized to that.
	(check_open_hook): Find struct dev in CNTL->hook and